# pqctoday-hsm

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TERMS.md  TERMS_OF_USE.md  compliance_additions.cpp  compliance_report.json  compliance_report.md  config.h.in.cmake  constants.d.ts  constants.js  cpp_compliance_report.json  cpp_compliance_report.md  debug_test  index.d.ts  inject_v32_additions.py  kat_dump.txt  kat_injector.py  kat_injector_js.py  lldb_script.txt  p11_v32_compliance_test  p11_v32_compliance_test.cpp  package-lock.json  package.json  print_seed.js  softhsm2.conf  softhsmrustv3design.md  softhsmv3.pc.in  softhsmv3_compatibility_report.md  softhsmv3devguide.md  strongswan-6.0.5-pqc-supplement.patch  strongswan-6.0.5-pqc.patch  strongswan-6.0.5-wasm.patch  test_acvp_lms_sigver  (+15 more)
.github/workflows/: ci.yml
JavaJCE/: JavaJCESofthsmv3.md
build_test/: softhsmv3.pc
cmake/modules/: CompilerOptions.cmake  CompilerSanitizers.cmake
docs/: acvp-key-template-audit.md  gap-analysis-pkcs11-v3.2.md  howtotestsofthsmv3.md  rust-engine.md  security_audit_03222026.md  security_audit_04132026.md  softhsmv3devguide.md  softhsmv3opsguide.md  wasm-charon-phase-3b-plus-roadmap.md
docs/issues/: 001-implement-file-based-persistence.md  002-update-softhsm2-util-for-ram-tokens.md
openssh-pkcs11/: .gitignore  CHANGELOG.md  LICENSE  README.md  STATUS.md
openssh-pkcs11/patches/: apply_mldsa_patches.py  ssh-mldsa.c
openssh-pkcs11/scripts/: build-wasm.sh  copy-to-hub.sh
openssh-pkcs11/wasm-shims/: pkcs11_static.c  posix_stubs.c  socket_wasm.c  sshd_wasm_main.c
rust/: Cargo.toml  output.txt  pkcs11_all_funcs.txt  rust_funcs.txt  test_harness.js  test_kat_parity.js  test_xmss.rs
rust/pkg_bundler/: softhsmrustv3.js
rust/pkg_nomod/: softhsmrustv3.js  softhsmrustv3_bg.wasm
rust/src/: constants.rs  ffi.rs  lib.rs  state.rs
rust/tests/: pqc_api_test.rs
scripts/: build-openssl-wasm.sh  build-pkcs11-provider-wasm.sh  build-strongswan-wasm-v2.sh  build-strongswan-wasm.sh  verify-strongswan-plugins.sh
src/lib/: CMakeLists.txt  P11Attributes.cpp  P11Attributes.h  P11Objects.cpp  P11Objects.h  SoftHSM.cpp  SoftHSM.h  SoftHSMHelpers.h  SoftHSM_cipher.cpp  SoftHSM_digest.cpp  SoftHSM_kem.cpp  SoftHSM_keygen.cpp  SoftHSM_objects.cpp  SoftHSM_sessions.cpp  SoftHSM_sign.cpp  SoftHSM_slots.cpp  main.cpp  vendor_mechanisms.h
src/lib/crypto/: AsymmetricAlgorithm.h  CMakeLists.txt  DerUtil.cpp  HDWalletDerivation.cpp  HDWalletDerivation.h  HashAlgorithm.h  MacAlgorithm.h  Makefile.am  OSSLChaCha20.cpp  OSSLChaCha20.h  OSSLCryptoFactory.cpp  OSSLCryptoFactory.h  OSSLECDSA.cpp  OSSLECDSA.h  OSSLECPrivateKey.cpp  OSSLEDDSA.cpp  OSSLEDDSA.h  OSSLEVPMacAlgorithm.cpp  OSSLEVPSymmetricAlgorithm.cpp  OSSLHMAC.cpp  OSSLMLDSA.cpp  OSSLMLDSA.h  OSSLMLKEMPrivateKey.cpp  OSSLRNG.cpp  OSSLRNG.h  OSSLRSA.cpp  OSSLRSA.h  OSSLRSAPrivateKey.cpp  OSSLSHA3.cpp  OSSLSHA3.h  OSSLSLHDSA.cpp  OSSLSLHDSA.h  OSSLSLHDSAPrivateKey.cpp  OSSLUtil.cpp  SymmetricAlgorithm.h  SymmetricKey.cpp
src/lib/crypto/stateful/: StatefulKeyPair.cpp  StatefulKeyPair.h  kat_randombytes.c  kat_randombytes.h  stateful_sources.txt
src/lib/crypto/test/: CMakeLists.txt  Makefile.am
strongswan-pkcs11/: Makefile.am  pkcs11.h  pkcs11_dh.c  pkcs11_kem.c  pkcs11_kem.h  pkcs11_plugin.c  pkcs11_private_key.c  pkcs11_public_key.c  test_ss.c
strongswan-wasm-shims/: README.md  STATUS.md  pkcs11_wasm_rpc.c  socket_wasm.c  socket_wasm.h  wasm_backend.c  wasm_hsm_init.c
strongswan-wasm-v2-shims/: README.md  charon_wasm_main.c  pkcs11_static.c  posix_stubs.c  test-boot.mjs  test-ml-dsa.mjs  test-ml-kem.mjs
test_results/: compliance_proof.json  compliance_proof.md
test_tokens/14a363f5-4a39-3fbe-4e5b-1f5f76d85261/: 0a6548fc-654c-19f3-b545-708d425199d4.object  0d17cfe9-ad34-f47a-3b89-d0ecbfb1f7f8.object  (+48 more)
tests/: README.md  acvp-wasm.mjs  helpers.mjs  parity-wasm.mjs  pqc_validate.cpp  smoke-wasm.mjs  softhsm2-local.conf  test-ecdsa-sha512.mjs  test_raw.cpp
webrpc/: README.md
(+46 files in other folders)
